@@ -1,3 +1,8 @@
+2017-02-22  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Don't allow both -fbranch-target-load-optimize and
+	-fbranch-target-load-optimize2 to run.
+
 2017-02-14  Edward Jones  <ed.jones@embecosm.com>
 
 	* Driver.cpp: Remove some flags unavailable in gcc 4.5
